--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -224,7 +224,7 @@ jobs:
           for attempt in {1..150}
           do
             echo -e "${LOG_CICD} Waiting for container startup (attempt $attempt/150)..."
-            "${CONTAINER_CMD[@]}" systemctl status redis.service || true
+            "${CONTAINER_CMD[@]}" journalctl -eu redis.service || true
             "${CONTAINER_CMD[@]}" systemctl status php8.1-fpm.service || true
             redis_pw="$("${CONTAINER_CMD[@]}" bash -c ". /usr/local/etc/library.sh; get_nc_config_value 'redis\"][\"password'")" \
             && redis_socket="$("${CONTAINER_CMD[@]}" bash -c ". /usr/local/etc/library.sh; get_nc_config_value 'redis\"][\"host'")" \
