--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -34,18 +34,22 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       runner_label: ${{ steps.script.outputs.runner_label }}
+      lxc_cmd: ${{ steps.script.outputs.lxc_cmd }}
     steps:
       - name: script
         id: script
         run: |
           if [[ "${LXD_ARCH}" == "arm64" ]]
           then
+            LXC_CMD="incus"
             RUNNER_LABEL="ubuntu-20.04-arm64"
           else
+            LXC_CMD="lxc"
             RUNNER_LABEL="ubuntu-20.04"
           fi
-          echo "runner_label=$RUNNER_LABEL" | tee -a $GITHUB_OUTPUT
 
+          echo "runner_label=$RUNNER_LABEL" | tee -a $GITHUB_OUTPUT
+          echo "lxc_cmd=$LXC_CMD" | tee -a $GITHUB_OUTPUT
   build-current:
     needs:
       - determine-runner
@@ -57,13 +61,14 @@ jobs:
       VERSION: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       ARTIFACT_NAME: "${{ github.run_id }}-lxd-${{ inputs.arch || 'x86' }}-image"
       LXD_ARCH: "${{ inputs.arch || 'x86' }}"
+      LXC: "${{ needs.determine-runner.outputs.lxc_cmd }}"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           ref: "${{ env.VERSION }}"
       - name: Cleanup lxd
-        run: test -z "$(lxc profile device show default | grep eth0)" || lxc profile device remove default eth0
+        run: test -z "$("$LXC" profile device show default | grep eth0)" || "$LXC" profile device remove default eth0
       - uses: whywaita/setup-lxd@v1
         continue-on-error: true
         with:
@@ -73,6 +78,8 @@ jobs:
           sudo iptables -I DOCKER-USER -i lxdbr0 -j ACCEPT
           sudo iptables -I DOCKER-USER -o lxdbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
       - name: Build LXD image
+        env:
+          USE_INCUS: "${{ needs.determine-runner.outputs.lxc_cmd == 'incus' && 'yes' || 'no' }}"
         run: |
           ./build/build-LXD.sh
       - name: Pack LXD image
@@ -80,7 +87,7 @@ jobs:
         run: |
           . ./build/buildlib.sh
           ARTIFACT_FILE="NextcloudPi_LXD_${LXD_ARCH:-x86}_${VERSION//\//_}"
-          lxc image export -q ncp/"${version}" "output/${ARTIFACT_FILE}"
+          "$LXC" image export -q ncp/"${version}" "output/${ARTIFACT_FILE}"
           echo "artifact_file=${ARTIFACT_FILE}.tar.gz" >> $GITHUB_OUTPUT
       - name: upload LXD image to artifact store
         uses: actions/upload-artifact@v3
@@ -90,6 +97,8 @@ jobs:
           if-no-files-found: error
 
   build-previous:
+    needs:
+      - determine-runner
     runs-on: [ ubuntu-20.04 ]
     if: ${{ inputs.arch == 'x86' || inputs.arch == '' }}
     outputs:
@@ -100,6 +109,7 @@ jobs:
       VERSION: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       ARTIFACT_NAME: "${{ github.run_id }}-lxd-${{ inputs.arch || 'x86' }}-image-previous"
       LXD_ARCH: "${{ inputs.arch || 'x86' }}"
+      LXC: "${{ needs.determine-runner.outputs.lxc_cmd }}"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -143,6 +153,8 @@ jobs:
           sudo iptables -I DOCKER-USER -o lxdbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
 
       - name: Build LXD image
+        env:
+          USE_INCUS: "${{ needs.determine-runner.outputs.lxc_cmd == 'incus' && 'yes' || 'no' }}"
         run: |
           ./build/build-LXD.sh
       - name: Pack LXD image
@@ -150,7 +162,7 @@ jobs:
         run: |
           . ./build/buildlib.sh
           ARTIFACT_FILE="NextcloudPi_LXD_${LXD_ARCH:-x86}_${VERSION//\//_}"
-          lxc image export -q ncp/"${version}" "output/${ARTIFACT_FILE}"
+          "${LXC}" image export -q ncp/"${version}" "output/${ARTIFACT_FILE}"
           echo "artifact_file=${ARTIFACT_FILE}.tar.gz" >> $GITHUB_OUTPUT
       - name: upload LXD image to artifact store
         uses: actions/upload-artifact@v3
@@ -161,6 +173,7 @@ jobs:
 
   test-update:
     needs:
+      - determine-runner
       - build-previous
     runs-on: [ubuntu-20.04]
     outputs:
@@ -169,6 +182,7 @@ jobs:
     env:
       VERSION: "${{ inputs.git_ref || github.ref }}"
       ARTIFACT_NAME: "${{ needs.build-previous.outputs.artifact_name }}"
+      LXC: "${{ needs.determine-runner.outputs.lxc_cmd }}"
     steps:
       - uses: whywaita/setup-lxd@v1
         continue-on-error: true
@@ -203,26 +217,26 @@ jobs:
       - name: Launch ncp container
         run: |
           set -x
-          lxc delete -q -f ncp || true
-          lxc image import -q "./${{ needs.build-previous.outputs.artifact_file }}" --alias "ncp/update"
-          systemd-run --user --scope -p "Delegate=yes" lxc launch -q "ncp/update" ncp
-          lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
-          lxc exec ncp -- rm -f /opt/ncdata/data/nextcloud.log
+          "$LXC" delete -q -f ncp || true
+          "$LXC" image import -q "./${{ needs.build-previous.outputs.artifact_file }}" --alias "ncp/update"
+          systemd-run --user --scope -p "Delegate=yes" "$LXC" launch -q "ncp/update" ncp
+          "$LXC" exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
+          "$LXC" exec ncp -- rm -f /opt/ncdata/data/nextcloud.log
           sleep 30
-          ip="$(lxc list -c n4 -f csv | grep '^ncp' | cut -d ',' -f2)"
+          ip="$("$LXC" list -c n4 -f csv | grep '^ncp' | cut -d ',' -f2)"
           ip="${ip/% *}"
           echo "${ip} nextcloudpi.local" | sudo tee /etc/hosts
       - name: Activate and Test LXD Image
         working-directory: ./tests
         run: |
-          lxc exec ncp -- bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
+          "$LXC" exec ncp -- bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
           python activation_tests.py --no-gui "nextcloudpi.local" 443 4443 || {
             echo "Activation test failed!"
             echo "Geckodriver logs:"
             tail -n 20 geckodriver.log >&2 || true
             echo "================"
             echo "ncp.log: "
-            lxc exec ncp -- "tail -n20 /var/log/ncp.log" || true
+            "$LXC" exec ncp -- "tail -n20 /var/log/ncp.log" || true
             exit 1
           }
           python system_tests.py --non-interactive || {
@@ -235,11 +249,11 @@ jobs:
             tail -n 20 geckodriver.log >&2 || true
             echo "================"
             echo "ncp.log: "
-            lxc exec ncp -- "tail -n20 /var/log/ncp.log" || true
+            "$LXC" exec ncp -- "tail -n20 /var/log/ncp.log" || true
             echo "================"
             echo "nextcloud log: "
-            datadir="$(lxc exec ncp -- ncc config:system:get datadirectory)"
-            lxc exec ncp -- cat "$datadir/nextcloud.log" || true
+            datadir="$("$LXC" exec ncp -- ncc config:system:get datadirectory)"
+            "$LXC" exec ncp -- cat "$datadir/nextcloud.log" || true
             exit 1
           }
 
@@ -257,35 +271,35 @@ jobs:
           echo "VERSION=${VERSION}" >> "$GITHUB_ENV"
           echo "Running update ${{ needs.build-previous.outputs.previous_version }} -> ${VERSION}"
           
-          current_nc_version="$(lxc exec ncp -- ncc status | grep "version:" | awk '{ print $3 }')"
+          current_nc_version="$("$LXC" exec ncp -- ncc status | grep "version:" | awk '{ print $3 }')"
           latest_nc_version="$(cat etc/ncp.cfg | jq -r '.nextcloud_version')"
           
-          lxc exec ncp -- bash -c "DBG=x ncp-update ${UPDATE_ARGS[*]}"
-          lxc exec ncp -- /usr/local/bin/ncc status
+          "$LXC" exec ncp -- bash -c "DBG=x ncp-update ${UPDATE_ARGS[*]}"
+          "$LXC" exec ncp -- /usr/local/bin/ncc status
           
           if [[ "$current_nc_version" =~ "$latest_nc_version".* ]]
           then
             echo "Nextcloud is up to date - skipping NC update test."
           else
-            lxc exec ncp -- bash -c "DBG=x ncp-update-nc ${latest_nc_version?}"
+            "$LXC" exec ncp -- bash -c "DBG=x ncp-update-nc ${latest_nc_version?}"
           fi
 
-          lxc exec ncp -- rm -f /opt/ncdata/data/nextcloud.log
+          "$LXC" exec ncp -- rm -f /opt/ncdata/data/nextcloud.log
           
-          lxc stop ncp
+          "$LXC" stop ncp
       - name: Relaunch container
         run: |
           set -x
-          systemd-run --user --scope -p "Delegate=yes" lxc start ncp
-          lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
+          systemd-run --user --scope -p "Delegate=yes" "$LXC" start ncp
+          "$LXC" exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
           sleep 30
-          ip="$(lxc list -c n4 -f csv | grep '^ncp' | cut -d ',' -f2)"
+          ip="$("$LXC" list -c n4 -f csv | grep '^ncp' | cut -d ',' -f2)"
           ip="${ip/% *}"
           echo "${ip} nextcloudpi.local" | sudo tee /etc/hosts
       - name: Test LXD Image
         working-directory: ./tests
         run: |
-          lxc exec ncp -- bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
+          "$LXC" exec ncp -- bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
           python system_tests.py --non-interactive || {
             echo "System test failed!"
             exit 1
@@ -296,28 +310,28 @@ jobs:
             tail -n 20 geckodriver.log >&2 || true
             echo "================"
             echo "ncp.log: "
-            lxc exec ncp -- "tail -n20 /var/log/ncp.log" || true
+            "$LXC" exec ncp -- "tail -n20 /var/log/ncp.log" || true
             echo "================"
             echo "nextcloud log: "
-            datadir="$(lxc exec ncp -- ncc config:system:get datadirectory)"
-            lxc exec ncp -- cat "$datadir/nextcloud.log" || true
+            datadir="$("$LXC" exec ncp -- ncc config:system:get datadirectory)"
+            "$LXC" exec ncp -- cat "$datadir/nextcloud.log" || true
             exit 1
           }
       - name: NCP distupgrade
         id: distupgrade
         run: |
-          lxc exec ncp -- cat /etc/os-release | grep VERSION_ID=11 || {
-            echo "Skipping dist-upgrade - can't upgrade from Debian $(lxc exec ncp -- cat /etc/os-release | grep VERSION_ID=)"
+          "$LXC" exec ncp -- cat /etc/os-release | grep VERSION_ID=11 || {
+            echo "Skipping dist-upgrade - can't upgrade from Debian $("$LXC" exec ncp -- cat /etc/os-release | grep VERSION_ID=)"
             echo "skipped=yes" | tee -a $GITHUB_OUTPUT
             exit 0
           }
-          lxc exec ncp -- bash -c 'ncp-dist-upgrade'
+          "$LXC" exec ncp -- bash -c 'ncp-dist-upgrade'
           echo "skipped=no" | tee -a $GITHUB_OUTPUT
       - name: Test LXD Image
         if: ${{ steps.distupgrade.output.skipped == 'no' }}
         working-directory: ./tests
         run: |
-          lxc exec ncp -- bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
+          "$LXC" exec ncp -- bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
           python system_tests.py --non-interactive || {
             echo "System test failed!"
             exit 1
@@ -328,14 +342,14 @@ jobs:
             tail -n 20 geckodriver.log >&2 || true
             echo "================"
             echo "ncp.log: "
-            lxc exec ncp -- "tail -n20 /var/log/ncp.log" || true
+            "$LXC" exec ncp -- "tail -n20 /var/log/ncp.log" || true
             echo "================"
             echo "nextcloud log: "
-            datadir="$(lxc exec ncp -- ncc config:system:get datadirectory)"
-            lxc exec ncp -- cat "$datadir/nextcloud.log" || true
+            datadir="$("$LXC" exec ncp -- ncc config:system:get datadirectory)"
+            "$LXC" exec ncp -- cat "$datadir/nextcloud.log" || true
             exit 1
           }
-          lxc stop ncp
+          "$LXC" stop ncp
 
   test-fresh-install:
     needs:
@@ -346,13 +360,14 @@ jobs:
       VERSION: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
       ARTIFACT_NAME: ${{ needs.build-current.outputs.artifact_name }}
       ARTIFACT_FILE: ${{ needs.build-current.outputs.artifact_file }}
+      LXC: "${{ needs.determine-runner.outputs.lxc_cmd }}"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           ref: "${{ env.VERSION }}"
       - name: Cleanup lxd
-        run: test -z "$(lxc profile device show default | grep eth0)" || lxc profile device remove default eth0
+        run: test -z "$("$LXC" profile device show default | grep eth0)" || "$LXC" profile device remove default eth0
       - uses: whywaita/setup-lxd@v1
         continue-on-error: true
         with:
@@ -379,38 +394,38 @@ jobs:
       - name: Remove old lxd images
         if: ${{ inputs.arch == 'arm64' }}
         run: |
-          for img in $(lxc image list -c f -f csv)
+          for img in $("$LXC" image list -c f -f csv)
           do
-            lxc image delete "$img"
+            "$LXC" image delete "$img"
           done
       - name: Launch ncp container
         run: |
           set -x
           . ./build/buildlib.sh
-          lxc delete -q -f ncp || true
-          lxc image import -q "./${ARTIFACT_FILE?}" --alias "ncp/test" || true
-          systemd-run --user --scope -p "Delegate=yes" lxc launch -q "ncp/test" ncp || \
-          sudo systemd-run --scope -p "Delegate=yes" lxc launch -q "ncp/test" ncp 
-          lxc exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
+          "$LXC" delete -q -f ncp || true
+          "$LXC" image import -q "./${ARTIFACT_FILE?}" --alias "ncp/test" || true
+          systemd-run --user --scope -p "Delegate=yes" "$LXC" launch -q "ncp/test" ncp || \
+          sudo systemd-run --scope -p "Delegate=yes" "$LXC" launch -q "ncp/test" ncp 
+          "$LXC" exec ncp -- bash -c 'while [ "$(systemctl is-system-running 2>/dev/null)" != "running" ] && [ "$(systemctl is-system-running 2>/dev/null)" != "degraded" ]; do :; done'
           sleep 30
-          ip="$(lxc list -c n4 -f csv | grep '^ncp' | cut -d ',' -f2)"
+          ip="$("$LXC" list -c n4 -f csv | grep '^ncp' | cut -d ',' -f2)"
           ip="${ip/% *}"
           echo "${ip} nextcloudpi.local" | sudo tee /etc/hosts
       - name: Test LXD Image
         working-directory: ./tests
         run: |
-          lxc exec ncp -- bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
+          "$LXC" exec ncp -- bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
           python activation_tests.py --no-gui "nextcloudpi.local" 443 4443 || {
             echo "Activation test failed!"
             echo "Geckodriver logs:"
             tail -n 20 geckodriver.log >&2 || true
             echo "================"
             echo "ncp.log: "
-            lxc exec ncp -- "tail -n20 /var/log/ncp.log" || true
+            "$LXC" exec ncp -- "tail -n20 /var/log/ncp.log" || true
             echo "================"
             echo "nextcloud log: "
-            datadir="$(lxc exec ncp -- ncc config:system:get datadirectory)"
-            lxc exec ncp -- cat "$datadir/nextcloud.log" || true
+            datadir="$("$LXC" exec ncp -- ncc config:system:get datadirectory)"
+            "$LXC" exec ncp -- cat "$datadir/nextcloud.log" || true
             exit 1
           }
           python system_tests.py --non-interactive || {
@@ -423,11 +438,11 @@ jobs:
             tail -n 20 geckodriver.log >&2 || true
             echo "================"
             echo "ncp.log: "
-            lxc exec ncp -- "tail -n20 /var/log/ncp.log" || true
+            "$LXC" exec ncp -- "tail -n20 /var/log/ncp.log" || true
             echo "================"
             echo "nextcloud log: "
-            datadir="$(lxc exec ncp -- ncc config:system:get datadirectory)"
-            lxc exec ncp -- cat "$datadir/nextcloud.log" || true
+            datadir="$("$LXC" exec ncp -- ncc config:system:get datadirectory)"
+            "$LXC" exec ncp -- cat "$datadir/nextcloud.log" || true
             exit 1
           }
 
