vm-tests.yml: Temporarily pin previous version for update test
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/vm-tests.yml
+++ b/.github/workflows/vm-tests.yml
@@ -81,6 +81,8 @@ jobs:
             }
             version="${version%-*-*}"
           fi
+          # TODO: REMOVE FOR FUTURE RELEASES
+          version="v1.53.3"
           echo "Previous version is '$version'"
           echo "previous_version=${version}" >> $GITHUB_OUTPUT
       - name: Generate ssh key
