--- a/.github/workflows/build-sd-images.yml
+++ b/.github/workflows/build-sd-images.yml
@@ -330,35 +330,32 @@ jobs:
           
           [[ "$success" == "true" ]] || {
             echo -e "${LOG_CICD} Nextcloud test failed in all attempts!"
+          
+            echo "Apache2 logs (error):"
+            sudo cat ./raspbian_root/var/log/apache2/error.log || true
+            echo "===================="
+            
+            echo "Apache2 logs (nc-error):"
+            sudo cat ./raspbian_root/var/log/apache2/nc-error.log || true
+            echo "===================="
+            
+            echo "PHP FPM logs:"
+            sudo cat ./raspbian_root/var/log/php*-fpm.log
+            echo "===================="
+            
+            echo "Nextcloud logs:"
+            sudo cat ./raspbian_root/opt/ncdata/data/nextcloud.log
+            echo "===================="
+            
+            echo "MySQL logs:"
+            sudo journalctl --file ./raspbian_root/var/log/journal/"$(sudo cat ./raspbian_root/etc/machine-id)"/system.journal --no-pager -eu mariadb || true
+            echo "===================="
+            
+            echo "Redis logs:"
+            sudo journalctl --file ./raspbian_root/var/log/journal/"$(sudo cat ./raspbian_root/etc/machine-id)"/system.journal --no-pager -eu redis-server || true
+            echo "===================="
             exit 1
           }
-
-      - name: "Debug info"
-        if: ${{ failure() }}
-        run: |
-          echo "Apache2 logs (error):"
-          sudo cat ./raspbian_root/var/log/apache2/error.log || true
-          echo "===================="
-          
-          echo "Apache2 logs (nc-error):"
-          sudo cat ./raspbian_root/var/log/apache2/nc-error.log || true
-          echo "===================="
-          
-          echo "PHP FPM logs:"
-          sudo cat ./raspbian_root/var/log/php*-fpm.log
-          echo "===================="
-          
-          echo "Nextcloud logs:"
-          sudo cat ./raspbian_root/opt/ncdata/data/nextcloud.log
-          echo "===================="
-          
-          echo "MySQL logs:"
-          sudo journalctl --file ./raspbian_root/var/log/journal/"$(sudo cat ./raspbian_root/etc/machine-id)"/system.journal --no-pager -eu mariadb
-          echo "===================="
-          
-          echo "Redis logs:"
-          sudo journalctl --file ./raspbian_root/var/log/journal/"$(sudo cat ./raspbian_root/etc/machine-id)"/system.journal --no-pager -eu redis-server
-          echo "===================="
 
 #  test-distupgrade:
 #    runs-on: ubuntu-20.04
