build-lxd.yml: Skip update test before running actual update
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -255,11 +255,10 @@ jobs:
             "$LXC" exec ncp -- cat "$datadir/nextcloud.log" || true
             exit 1
           }
-          python system_tests.py --non-interactive || {
+          python system_tests.py --non-interactive --skip-update-test || {
             echo "System test failed!"
             exit 1
           }
-
       - name: Update ncp
         run: |
           set -ex
