build-lxd.yml: Set BRANCH explicitly when building LXD images
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-lxd.yml
+++ b/.github/workflows/build-lxd.yml
@@ -82,7 +82,7 @@ jobs:
         env:
           USE_INCUS: "${{ needs.determine-runner.outputs.lxc_cmd == 'incus' && 'yes' || 'no' }}"
         run: |
-          ./build/build-LXD.sh
+          BRANCH="$VERSION" ./build/build-LXD.sh
       - name: Pack LXD image
         id: pack-lxd
         run: |
@@ -158,7 +158,7 @@ jobs:
         env:
           USE_INCUS: "${{ needs.determine-runner.outputs.lxc_cmd == 'incus' && 'yes' || 'no' }}"
         run: |
-          ./build/build-LXD.sh
+          BRANCH="$VERSION" ./build/build-LXD.sh
       - name: Pack LXD image
         id: pack-lxd
         run: |
