build-LXD.sh: Migrate to incus
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/lxd-trigger.yml
+++ b/.github/workflows/lxd-trigger.yml
@@ -14,4 +14,4 @@ jobs:
   lxd:
     uses: ./.github/workflows/build-lxd.yml
     with:
-      git_ref: "${{ github.ref }}"
+      git_ref: "${{ github.head_ref || github.ref_name }}"
